--- a/PRACTISE/list/ol/ol.html
+++ b/PRACTISE/list/ol/ol.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>ways to eat oreo!!11</h1>
-	<ol>
+	<ol>after this-
 		<li>first wrap the packet</li>
 		<li>take oreo out</li>
 		<ol>
