--- a/PRACTISE/list/ol/ol.html
+++ b/PRACTISE/list/ol/ol.html
@@ -9,13 +9,14 @@
 	<h1>ways to eat oreo!!11</h1>
 	<ol>after this-
 		<li>first wrap the packet</li>
-		<li>take oreo out</li>
+		<li>take oreo out
 		<ol>
 			<li>twisst</li>
 		<li>lick</li>
 		<li>pour in milk</li></ol>
 		<li>enjoy the bite</li>
-	</ol>
+	</ol> 
+</li>
 <h2>love the way oreo is made</h2>
 </body>
 </html>
