--- a/PRACTISE/list/ul/un.html
+++ b/PRACTISE/list/ul/un.html
@@ -9,12 +9,12 @@
 <ul>
 	<li>corn</li>
 	<li>baby corn</li>
-	<li>vegetables</li>
+	<li>vegetables
 <ul>
 	<li>tomato</li>
 	<li>potat6o</li>
 	<li>raddish</li>
-</ul>
+</ul> </li>
 </ul>
 </body>
 </html>
