--- a/PRACTISE/semantic-tags/semantic.html
+++ b/PRACTISE/semantic-tags/semantic.html
@@ -10,13 +10,13 @@
 <h1>bigger is better</h1>
 <section>
 	section 1
-	<article>artile 1!</article>
-	<article>article 2!</article>
+	<article>artile 1</article>
+	<article>article 2</article>
 </section>
 <section>
 	section 2
-	<article>artile 3!</article>
-<article>article 4!</article>
+	<article>artile 3</article>
+    <article>article 4</article>
 </section>
 <aside>aside-some information that is realated to the site indirectly</aside>
 <footer>copyright to ayushpvt.ltd</footer>
