--- a/PRACTISE/semantic-tags/semantic.html
+++ b/PRACTISE/semantic-tags/semantic.html
@@ -8,15 +8,15 @@
 <header>it consitb of companies logo bheading and sometimes some navit5agation tags!<nav>it cont5ains links for various pqartys nod the web page links</nav>
 </header>
 <h1>bigger is better</h1>
-<section>
-	section 1
-	<article>artile 1</article>
-	<article>article 2</article>
+<section> 
+	<h2>section 1</h2>
+	<article><h3>article 1</h3></article>
+	<article><h3>article 2</h3></article>
 </section>
 <section>
-	section 2
-	<article>artile 3</article>
-    <article>article 4</article>
+	<h2>section 2</h2>
+	<article><h3>article 3</h3></article>
+    <article><h3>article 4</h3></article>
 </section>
 <aside>aside-some information that is realated to the site indirectly</aside>
 <footer>copyright to ayushpvt.ltd</footer>
