--- a/PRACTISE/list/ol/ol.html
+++ b/PRACTISE/list/ol/ol.html
@@ -7,16 +7,17 @@
 </head>
 <body>
 	<h1>ways to eat oreo!!11</h1>
-	<ol>after this-
+	<ol><li>after this-</li>
 		<li>first wrap the packet</li>
 		<li>take oreo out
 		<ol>
 			<li>twisst</li>
 		<li>lick</li>
-		<li>pour in milk</li></ol>
-		<li>enjoy the bite</li>
-	</ol> 
+		<li>pour in milk</li>
+	</ol>
 </li>
+		<li>enjoy the bite</li>
+	</ol>
 <h2>love the way oreo is made</h2>
 </body>
 </html>
