--- a/PRACTISE/links/internal-link/internal-link.html
+++ b/PRACTISE/links/internal-link/internal-link.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>wanna see a magic!!!</h1>
-<a href="magic.html" tittle='same dir link'>
+<a href="magic.html">
 	<div>click here to see magic</div>
 </a>
 </body>
