--- a/PRACTISE/links/sectiion-link/section.html
+++ b/PRACTISE/links/sectiion-link/section.html
@@ -10,7 +10,7 @@
 	<h2>sections</h2>
 	<ol>
 		<li><a href="#section-1">flora</a></li>
-		<li><a href="#section-2"></a>fauuna</li>
+		<li><a href="#section-2">fauuna</a></li>
 		<li><a href="#section-3">physics</a></li>
 		<li><a href="#section-4">mathaematics</a></li>
 	</ol>
